--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div id="mySidenav" class="sidenav">
 		<div class="nav-branding">
 			<div class="logo">
-				<img src="img_jb-1/logo.png" alt="Morume Mohila Unnyan Sanghatan">
+				<img src="new/logo.png" alt="Morume Mohila Unnyan Sanghatan">
 			</div>
 			<div class="nav-title">
 				<h2>MMUS</h2>
@@ -46,7 +46,7 @@
 		<div class="container">
 			<div class="branding">
 				<div class="logo">
-					<img src="img_jb-1/logo.png" alt="morume mohilla unnyan sanghatan">
+					<img src="new/logo.png" alt="morume mohilla unnyan sanghatan">
 				</div>
 				<div class="title">
 					<h1>MMUS</h1>
@@ -122,23 +122,23 @@
 			<h2 id="projects">Gallery</h2>
 			<div class="project-img">
 				<div class="pro-img">
-					<img src="img_jb-1/pic-01.jpg" alt="morume mohila unnyan sanghatan project">
+					<img src="new/pic-01.jpg" alt="morume mohila unnyan sanghatan project">
 					<p></p>
 				</div>
 				<div class="pro-img">
-					<img src="img_jb-1/pic-02.jpg" alt="morume mohila unnyan sanghatan project">
+					<img src="new/pic-02.jpg" alt="morume mohila unnyan sanghatan project">
 					<p></p>
 				</div>
 				<div class="pro-img">
-					<img src="img_jb-1/pic-03.jpg" alt="morume mohila unnyan sanghatan project">
+					<img src="new/pic-03.jpg" alt="morume mohila unnyan sanghatan project">
 					<p></p>
 				</div>
 				<div class="pro-img">
-					<img src="img_jb-1/pic-04.jpg" alt="morume mohila unnyan sanghatan project">
+					<img src="new/pic-04.jpg" alt="morume mohila unnyan sanghatan project">
 					<p></p>
 				</div>
 				<div class="pro-img">
-					<img src="img_jb-1/pic-05.jpg" alt="morume mohila unnyan sanghatan project">
+					<img src="new/pic-05.jpg" alt="morume mohila unnyan sanghatan project">
 					<p></p>
 				</div>
 			</div>
@@ -147,7 +147,7 @@
 	<footer>
 		<div class="container">
 			<div class="footer-branding">
-				<img src="img_jb-1/logo.png" alt="morume mohila unnyan sanghatan">
+				<img src="new/logo.png" alt="morume mohila unnyan sanghatan">
 				<div class="footer-brand-desc">
 					<h2>MMUS</h2>
 					<p>Women's Awakening Organization</p>
@@ -169,7 +169,7 @@
 		<div class="copyright">
 			<div class="container">
 				<div class="cpr-branding">
-					<img src="img_jb-1/logo.png" alt="morume mohila unnyan sanghatan">
+					<img src="new/logo.png" alt="morume mohila unnyan sanghatan">
 					<h3>MMUS</h3>
 				</div>
 				<div class="cpr">
